@@ -74,7 +74,9 @@
                 <item>
                     <key> <string>bottom</string> </key>
                     <value>
-                      <list/>
+                      <list>
+                        <string>my_text_content</string>
+                      </list>
                     </value>
                 </item>
                 <item>
@@ -82,7 +84,6 @@
                     <value>
                       <list>
                         <string>my_description</string>
-                        <string>my_text_content</string>
                       </list>
                     </value>
                 </item>
@@ -98,13 +99,17 @@
                       <list>
                         <string>my_id</string>
                         <string>my_reference</string>
+                        <string>my_version</string>
                       </list>
                     </value>
                 </item>
                 <item>
                     <key> <string>right</string> </key>
                     <value>
-                      <list/>
+                      <list>
+                        <string>my_comment</string>
+                        <string>my_translated_validation_state_title</string>
+                      </list>
                     </value>
                 </item>
               </dictionary>
